[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fourpro-api"
version = "0.1.0"
description = "API principal 4Pro_BI (plataforma multitenant)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "pydantic-settings>=2.2",
    "python-jose[cryptography]>=3.3",
    "passlib[argon2]>=1.7",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
    "email-validator>=2.0",
    "celery[redis]>=5.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.pytest.ini_options]
# passlib/argon2-cffi: avisos de bibliotecas até migração (ex. hash directo com argon2-cffi).
filterwarnings = [
    "ignore:'crypt' is deprecated and slated for removal in Python 3.13:DeprecationWarning:passlib.utils",
    "ignore:Accessing argon2.__version__ is deprecated:DeprecationWarning:passlib.handlers.argon2",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Variáveis de ambiente antes de importar fourpro_api (settings na importação).
"tests/conftest.py" = ["E402"]

[tool.hatch.build.targets.wheel]
packages = ["fourpro_api"]
